// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skills renders correctly with a single category 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c0 {
  padding: 6rem 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c4 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 2.5rem;
}

.c5 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1rem;
}

.c6 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.c7 {
  font-size: 0.875rem;
  padding: 0.375rem 0.875rem;
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c4 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c4 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        Skills
      </p>
      <h2
        class="c3"
      >
        What I work with
      </h2>
      <div
        class="c4"
      >
        <div
          class=""
        >
          <h3
            class="c5"
          >
            Frontend
          </h3>
          <ul
            class="c6"
          >
            <li
              class="c7"
            >
              React
            </li>
            <li
              class="c7"
            >
              Next.js
            </li>
            <li
              class="c7"
            >
              TypeScript
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`Skills renders correctly with all categories 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c0 {
  padding: 6rem 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c4 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 2.5rem;
}

.c5 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1rem;
}

.c6 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.c7 {
  font-size: 0.875rem;
  padding: 0.375rem 0.875rem;
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c4 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c4 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        Skills
      </p>
      <h2
        class="c3"
      >
        What I work with
      </h2>
      <div
        class="c4"
      >
        <div
          class=""
        >
          <h3
            class="c5"
          >
            Frontend
          </h3>
          <ul
            class="c6"
          >
            <li
              class="c7"
            >
              React
            </li>
            <li
              class="c7"
            >
              Next.js
            </li>
            <li
              class="c7"
            >
              TypeScript
            </li>
            <li
              class="c7"
            >
              styled-components
            </li>
            <li
              class="c7"
            >
              Storybook
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c5"
          >
            Ecommerce
          </h3>
          <ul
            class="c6"
          >
            <li
              class="c7"
            >
              Shopify
            </li>
            <li
              class="c7"
            >
              Shopify Plus
            </li>
            <li
              class="c7"
            >
              Storefront API
            </li>
            <li
              class="c7"
            >
              Liquid
            </li>
            <li
              class="c7"
            >
              Hydrogen
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c5"
          >
            CMS & Data
          </h3>
          <ul
            class="c6"
          >
            <li
              class="c7"
            >
              Contentful
            </li>
            <li
              class="c7"
            >
              Prismic
            </li>
            <li
              class="c7"
            >
              Algolia
            </li>
            <li
              class="c7"
            >
              REST
            </li>
            <li
              class="c7"
            >
              GraphQL
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c5"
          >
            Tooling
          </h3>
          <ul
            class="c6"
          >
            <li
              class="c7"
            >
              Vite
            </li>
            <li
              class="c7"
            >
              Webpack
            </li>
            <li
              class="c7"
            >
              ESLint
            </li>
            <li
              class="c7"
            >
              Jest
            </li>
            <li
              class="c7"
            >
              Vitest
            </li>
            <li
              class="c7"
            >
              Playwright
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c5"
          >
            Cloud & DevOps
          </h3>
          <ul
            class="c6"
          >
            <li
              class="c7"
            >
              Vercel
            </li>
            <li
              class="c7"
            >
              AWS
            </li>
            <li
              class="c7"
            >
              GitHub Actions
            </li>
            <li
              class="c7"
            >
              Sentry
            </li>
            <li
              class="c7"
            >
              Chromatic
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c5"
          >
            Design
          </h3>
          <ul
            class="c6"
          >
            <li
              class="c7"
            >
              Figma
            </li>
            <li
              class="c7"
            >
              Responsive Design
            </li>
            <li
              class="c7"
            >
              Design Systems
            </li>
            <li
              class="c7"
            >
              Core Web Vitals
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;
